gitops-demo/apps/flux-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux-demo
  labels:
    managed-by: flux
