gitops-demo/apps/flux-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-flux
  namespace: flux-demo
  labels:
    app: nginx-flux
    managed-by: flux
spec:
  ingressClassName: nginx
  rules:
    - host: flux-demo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-flux
                port:
                  number: 80
    - host: flux-demo.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-flux
                port:
                  number: 80
